--- a/client/pages/Home/components/01-AccountSetupForm/AccountSetupForm.module.css
+++ b/client/pages/Home/components/01-AccountSetupForm/AccountSetupForm.module.css
@@ -153,7 +153,9 @@
 
 .accountSetupFormSect2 .userTestimonials {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center; /* Ensure alignment to the center */
+    margin: 20px;
 }
 
 .userTestimonials .userReview {
